--- a/dotNet5782_0545_8228/PL/MainWindow.xaml
+++ b/dotNet5782_0545_8228/PL/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
         Title="Xperience Drone Solutions" Height="640" Width="800"
-        SizeToContent="Height">
+        SizeToContent="Height"
+        Background="Transparent">
     <Window.Resources>
 
     </Window.Resources>
@@ -29,5 +30,6 @@
         <Image Name="Drone" Margin="346,69,346,449" Height="100" Width="100" HorizontalAlignment="Center" VerticalAlignment="Center" Source="/images/drone-x.png"/>
         <RadioButton Name="IsCustomer" Content="Customer User" HorizontalAlignment="Center" Margin="120,-20,0,0" VerticalAlignment="Center"/>
         <RadioButton Name="IsBusiness" Content="Business User" HorizontalAlignment="Center" Margin="-120,-20,0,0" VerticalAlignment="Center" IsChecked="True"/>
+       
     </Grid>
 </Window>
