--- a/dotNet5782_0545_8228/PL/MainWindow.xaml
+++ b/dotNet5782_0545_8228/PL/MainWindow.xaml
@@ -11,7 +11,7 @@
     <Window.Resources>
 
     </Window.Resources>
-    <Grid Opacity="0.99" Cursor="Arrow" Background="{StaticResource WindowBrush}">
+    <Grid Opacity="0.99" Cursor="Arrow" Background="{StaticResource ButtonBrush}" >
 
 
         <Button x:Name="ShowDronesButton" 
@@ -26,7 +26,7 @@
         <Image Name="XDS" HorizontalAlignment="Center" Height="179" Margin="0,-200,0,0" VerticalAlignment="Center" Width="240" Source="/images/XDS.png"/>
         <TextBox Name="Username" Text="Enter Username"  HorizontalAlignment="Center" Margin="0,70,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="214" Height="20"/>
         <TextBox Name="Password" Text="Enter Password" HorizontalAlignment="Center" Margin="0,150,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="214" Height="20"  />
-        <Button Name="NewUser" Content="Create a New Account" HorizontalAlignment="Left" Margin="10,0,0,10" VerticalAlignment="Bottom" Width="131" Background="{StaticResource ButtonBrush}"/>
+        <Button Name="NewUser" Content="Create a New Account" HorizontalAlignment="Left" Margin="10,0,0,10" VerticalAlignment="Bottom" Width="131" Background="{StaticResource ButtonBrush}" Click="NewUser_Click"/>
         <Image Name="Drone" Margin="346,69,346,449" Height="100" Width="100" HorizontalAlignment="Center" VerticalAlignment="Center" Source="/images/drone-x.png"/>
         <RadioButton Name="IsCustomer" Content="Customer User" HorizontalAlignment="Center" Margin="120,-20,0,0" VerticalAlignment="Center"/>
         <RadioButton Name="IsBusiness" Content="Business User" HorizontalAlignment="Center" Margin="-120,-20,0,0" VerticalAlignment="Center" IsChecked="True"/>
