--- a/dotNet5782_0545_8228/PL/ListWindow.xaml
+++ b/dotNet5782_0545_8228/PL/ListWindow.xaml
@@ -1,19 +1,33 @@
-﻿<Window x:Class="PL.DroneListWindow"
+﻿<Window x:Class="PL.ListWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="System Management" Height="640" Width="800" Background="Gray">
+        Title="System Management" Height="640" Width="800"
+        Background="Transparent"
+        WindowStyle="None"
+        AllowsTransparency="True">
+    <Border CornerRadius="10" MouseDown="Border_MouseDown">
     <Grid Name="MainGrid">
         <TabControl>
             <TabItem Header="Drones">
-                <Grid>
+                <Grid DataContext="{Binding Path=drones}" Background="Gray">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="20*"></RowDefinition>
                         <RowDefinition Height="480*"></RowDefinition>
+                        <RowDefinition Height="20*"></RowDefinition>
                     </Grid.RowDefinitions>
+                    <Button Name="LogoutButton1"
+                                Content="Logout"
+                                Background="{StaticResource ButtonBrush}"
+                                Click="CloseButton_Click"
+                                FontSize="12" FontFamily="Tw Cen MT" 
+                                Margin="10,0,0,5"
+                                Grid.Row="2"
+                                HorizontalAlignment="Left" VerticalAlignment="Bottom"
+                                Width="100"/>
                     <Grid Name="DroneGrid" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Height="auto" Grid.Row="0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
@@ -22,14 +36,14 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions >
 
-                        <Button Name="CloseButton" Content="Close" Background="{StaticResource ButtonBrush}" Grid.Column="0" Click="CloseButton_Click" FontSize="18" FontFamily="Tw Cen MT" />
+                        <Button Name="ClearFilterButton1" Content="Clear Filters" FontSize="18" FontFamily="Tw Cen MT"  Grid.Column="0" Background="{StaticResource ButtonBrush}" Click="ClearFilterButton_Click"/>
                         <ComboBox Name="DroneStatusSelector" Background="{StaticResource ButtonBrush}" SelectionChanged="DroneStatusSelector_SelectionChanged" Grid.Column="1" />
-                        <Button Name="AddDroneButton" Content="Add Drone" Background="{StaticResource ButtonBrush}" Grid.Column="3" Click="AddDroneButton_Click" FontSize="18" FontFamily="Tw Cen MT" />
+                        <Button Name="AddDroneButton" Content="Add Drone" Background="{StaticResource AddButtonBrush}" Grid.Column="3" Click="AddDroneButton_Click" FontSize="18" FontFamily="Tw Cen MT" />
                         <ComboBox Name="DroneWeightSelector" Grid.Column="2" Background="{StaticResource ButtonBrush}" SelectionChanged="DroneWeightSelector_SelectionChanged"/>
 
                     </Grid>
 
-                    <ListView  x:Name="DroneListView" Grid.Row="1" Background="{StaticResource WindowBrush}" MouseDoubleClick="DroneActionWindow"  >
+                    <ListView  Name="DroneListView" Grid.Row="1" Background="{StaticResource WindowBrush}" MouseDoubleClick="DroneActionWindow" >
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="ID" Width="30" DisplayMemberBinding="{Binding Path=ID}"/>
@@ -45,11 +59,21 @@
                 </Grid>
             </TabItem>
             <TabItem Header="Packages">
-                <Grid>
+                <Grid DataContext="{Binding Path=packages}" Background="Gray">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="20*"></RowDefinition>
                         <RowDefinition Height="480*"></RowDefinition>
+                        <RowDefinition Height="20*"></RowDefinition>
                     </Grid.RowDefinitions>
+                    <Button Name="LogoutButton2"
+                                Content="Logout"
+                                Background="{StaticResource ButtonBrush}"
+                                Click="CloseButton_Click"
+                                FontSize="12" FontFamily="Tw Cen MT" 
+                                Margin="10,-10,0,0"
+                                Grid.Row="2"
+                                HorizontalAlignment="Left" VerticalAlignment="Bottom"
+                                Width="100"/>
                     <Grid Name="PackageGrid" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Height="auto" Grid.Row="0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
@@ -57,20 +81,19 @@
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions >
-
-                        <Button Name="ExtraPackageButton" Content="Close" Background="{StaticResource ButtonBrush}" Grid.Column="0" Click="CloseButton_Click" FontSize="18" FontFamily="Tw Cen MT" />
+                        <Button Name="ClearFilterButton2" Content="Clear Filters" FontSize="18" FontFamily="Tw Cen MT"  Grid.Column="0" Background="{StaticResource ButtonBrush}" Click="ClearFilterButton_Click"/>
                         <ComboBox Name="PackageStatusSelector" Background="{StaticResource ButtonBrush}" SelectionChanged="DroneStatusSelector_SelectionChanged" Grid.Column="1" />
                         <Button Name="AddPackageeButton" Content="Add Package" Background="{StaticResource ButtonBrush}" Grid.Column="3" Click="AddDroneButton_Click" FontSize="18" FontFamily="Tw Cen MT" />
                         <ComboBox Name="PackageWeightSelector" Grid.Column="2" Background="{StaticResource ButtonBrush}" SelectionChanged="DroneWeightSelector_SelectionChanged"/>
 
                     </Grid>
 
-                    <ListView  x:Name="PackageListView" Grid.Row="1" Background="{StaticResource WindowBrush}" MouseDoubleClick="DroneActionWindow"  >
+                    <ListView  Name="PackageListView" Grid.Row="1" Background="{StaticResource WindowBrush}" MouseDoubleClick="DroneActionWindow"  >
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="ID" Width="30" DisplayMemberBinding="{Binding Path=ID}"/>
                                 <GridViewColumn Header="Sender Name" Width="125" DisplayMemberBinding="{Binding Path=senderName}"/>
-                                <GridViewColumn Header="Receiver Name" Width="125" DisplayMemberBinding="{Binding Path=receiverName}"/>
+                                <GridViewColumn Header="Receiver Name" Width="125" DisplayMemberBinding="{Binding  Path=receiverName}"/>
                                 <GridViewColumn Header="Weight" Width="75" DisplayMemberBinding="{Binding Path=weightCategory}"/>
                                 <GridViewColumn Header="Priority" Width="200" DisplayMemberBinding="{Binding Path=priority}"/>
                                 <GridViewColumn Header="Status" Width="100" DisplayMemberBinding="{Binding Path=status}"/>
@@ -81,11 +104,21 @@
 
             </TabItem>
             <TabItem Header="Stations">
-                <Grid>
+                <Grid DataContext="{Binding Path=stations}" Background="Gray">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="20*"></RowDefinition>
                         <RowDefinition Height="480*"></RowDefinition>
+                        <RowDefinition Height="20*"></RowDefinition>
                     </Grid.RowDefinitions>
+                    <Button Name="LogoutButton3"
+                                Content="Logout"
+                                Background="{StaticResource ButtonBrush}"
+                                Click="CloseButton_Click"
+                                FontSize="12" FontFamily="Tw Cen MT" 
+                                Margin="10,-10,0,0"
+                                Grid.Row="2"
+                                HorizontalAlignment="Left" VerticalAlignment="Bottom"
+                                Width="100"/>
                     <Grid Name="StationGrid" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Height="auto" Grid.Row="0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
@@ -94,14 +127,14 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions >
 
-                        <Button Name="ExtraButton" Content="Close" Background="{StaticResource ButtonBrush}" Grid.Column="0" Click="CloseButton_Click" FontSize="18" FontFamily="Tw Cen MT" />
+                        <Button Name="ClearFilterButton3" Content="Clear Filters" FontSize="18" FontFamily="Tw Cen MT"  Grid.Column="0" Background="{StaticResource ButtonBrush}" Click="ClearFilterButton_Click"/>
                         <ComboBox Name="StationStatusSelector" Background="{StaticResource ButtonBrush}" SelectionChanged="DroneStatusSelector_SelectionChanged" Grid.Column="1" />
                         <Button Name="AddStationButton" Content="Add Station" Background="{StaticResource ButtonBrush}" Grid.Column="3" Click="AddDroneButton_Click" FontSize="18" FontFamily="Tw Cen MT" />
                         <ComboBox Name="StationSelector" Grid.Column="2" Background="{StaticResource ButtonBrush}" SelectionChanged="DroneWeightSelector_SelectionChanged"/>
 
                     </Grid>
 
-                    <ListView  x:Name="StationListView" Grid.Row="1" Background="{StaticResource WindowBrush}">
+                    <ListView  Name="StationListView" Grid.Row="1" Background="{StaticResource WindowBrush}">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="ID" Width="30" DisplayMemberBinding="{Binding Path=ID}"/>
@@ -117,11 +150,21 @@
 
             </TabItem>
             <TabItem Header="Customers">
-                <Grid>
+                <Grid DataContext="{Binding Path=customers}" Background="Gray">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="20*"></RowDefinition>
                         <RowDefinition Height="480*"></RowDefinition>
+                        <RowDefinition Height="20*"></RowDefinition>
                     </Grid.RowDefinitions>
+                    <Button Name="LogoutButton4"
+                                Content="Logout"
+                                Background="{StaticResource ButtonBrush}"
+                                Click="CloseButton_Click"
+                                FontSize="12" FontFamily="Tw Cen MT" 
+                                Margin="10,-10,0,0"
+                                Grid.Row="2"
+                                HorizontalAlignment="Left" VerticalAlignment="Bottom"
+                                Width="100"/>
                     <Grid Name="CustomerGrid" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Height="auto" Grid.Row="0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
@@ -130,23 +173,23 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions >
 
-                        <Button Name="Extra2eButton" Content="Close" Background="{StaticResource ButtonBrush}" Grid.Column="0" Click="CloseButton_Click" FontSize="18" FontFamily="Tw Cen MT" />
+                        <Button Name="ClearFilterButton4" Content="Clear Filters" FontSize="18" FontFamily="Tw Cen MT"  Grid.Column="0" Background="{StaticResource ButtonBrush}" Click="ClearFilterButton_Click"/>
                         <ComboBox Name="CustomerStatusSelector" Background="{StaticResource ButtonBrush}" SelectionChanged="DroneStatusSelector_SelectionChanged" Grid.Column="1" />
                         <Button Name="AddCustomerButton" Content="Add Customer" Background="{StaticResource ButtonBrush}" Grid.Column="3" Click="AddDroneButton_Click" FontSize="18" FontFamily="Tw Cen MT" />
                         <ComboBox Name="CustomerWeightSelector" Grid.Column="2" Background="{StaticResource ButtonBrush}" SelectionChanged="DroneWeightSelector_SelectionChanged"/>
 
                     </Grid>
 
-                    <ListView  x:Name="CustomerListView" Grid.Row="1" Background="{StaticResource WindowBrush}" MouseDoubleClick="DroneActionWindow"  >
+                    <ListView  Name="CustomerListView" Grid.Row="1" Background="{StaticResource WindowBrush}" MouseDoubleClick="DroneActionWindow"  >
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="ID" Width="30" DisplayMemberBinding="{Binding Path=ID}"/>
                                 <GridViewColumn Header="Name" Width="125" DisplayMemberBinding="{Binding Path=name}"/>
                                 <GridViewColumn Header="Phone" Width="125" DisplayMemberBinding="{Binding Path=phoneNumber}"/>
-                                <GridViewColumn Header="Expected Packages" Width="75" DisplayMemberBinding="{Binding Path=numberExpectedPackages}"/>
-                                <GridViewColumn Header="Delivered Packages" Width="125" DisplayMemberBinding="{Binding Path=numberPackagesDelivered}"/>
-                                <GridViewColumn Header="Undelivered Packages" Width="125" DisplayMemberBinding="{Binding Path=numberPackagesUndelivered}"/>
-                                <GridViewColumn Header="Recieved Packages" Width="125" DisplayMemberBinding="{Binding Path=numberReceivedPackages}"/>
+                                <GridViewColumn Header="# Expected Packages" Width="75" DisplayMemberBinding="{Binding Path=numberExpectedPackages}"/>
+                                <GridViewColumn Header="# Delivered Packages" Width="125" DisplayMemberBinding="{Binding Path=numberPackagesDelivered}"/>
+                                <GridViewColumn Header="# Undelivered Packages" Width="125" DisplayMemberBinding="{Binding Path=numberPackagesUndelivered}"/>
+                                <GridViewColumn Header="# Recieved Packages" Width="125" DisplayMemberBinding="{Binding Path=numberReceivedPackages}"/>
                             </GridView>
                         </ListView.View>
                     </ListView>
@@ -163,4 +206,6 @@
 
 
     </Grid>
+    </Border>
 </Window>
+
