--- a/dotNet5782_0545_8228/PL/DroneWindow.xaml
+++ b/dotNet5782_0545_8228/PL/DroneWindow.xaml
@@ -5,12 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="Drone Action Center" Height="450" Width="600">
+        Title="Drone Action Center" Height="450" Width="650">
     <Grid Background="{StaticResource WindowBrush}">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="299*"/>
-            <ColumnDefinition Width="301*"/>
-        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50*"/>
+            <RowDefinition Height="300*"/>
+        </Grid.RowDefinitions>
         <TextBox Name="ModelEntry" 
                  HorizontalAlignment="Left" 
                  Text="Enter Model" 
@@ -20,16 +20,8 @@
                  RenderTransformOrigin="0.5,0.5" 
                  Margin="237,118,0,0" 
                  Visibility="Hidden" 
-                 Grid.ColumnSpan="2" 
-                 ContentElement.MouseEnter="ModelEntry_MouseEnter">
-            <TextBox.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="-0.152"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </TextBox.RenderTransform>
+                 Grid.ColumnSpan="2">
+
         </TextBox>
         <Button Name="AddDrone" 
                 Content="Add Drone" 
@@ -42,42 +34,37 @@
         <ComboBox Name="WeightSelection" HorizontalAlignment="Left" Margin="232,195,0,0" VerticalAlignment="Top" Width="136" Visibility="Hidden" Grid.ColumnSpan="2" />
         <ComboBox Name="StationSelection" HorizontalAlignment="Left" VerticalAlignment="Top" Width="136" Margin="232,155,0,0" Visibility="Hidden" Grid.ColumnSpan="2"/>
         <Button x:Name="Cancel" 
-            Content="X" 
+            Content="Cancel" 
             HorizontalAlignment="Left"  
-            VerticalAlignment="Top" Width="24" 
-            Click="Cancel_Click" 
-            Height="23" Margin="267,10,0,0" 
-            FontFamily="Tw Cen MT" FontSize="20" FontStretch="Expanded"
-            Background="Red" Grid.Column="1"/>
+            VerticalAlignment="Top" Width="60" Height="20" 
+            Click="Cancel_Click"  Margin="10,342,0,0" 
+            FontFamily="Tw Cen MT" FontSize="14" FontStretch="Expanded"
+            Background="{StaticResource ButtonBrush}" Grid.Row="1"/>
 
-        <TextBox Name="UpdateDroneModelText" HorizontalAlignment="Left" Margin="103,166,0,0" Text="Enter Model" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Grid.Column="1" Visibility="Hidden"/>
-        <Button Name="ModelUpdateButton" Background="{StaticResource ButtonBrush}" Content="Update" Grid.Column="1" HorizontalAlignment="Left" Margin="142,206,0,0" VerticalAlignment="Top" Click="ModelUpdateButton_Click" Visibility="Hidden"/>
 
-        <Grid Name="ButtonGrid" Margin="10,19,0,19" Background="LightSlateGray" Visibility="Hidden">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <TextBlock Name="DroneData" Visibility="Hidden" TextWrapping="Wrap" Grid.Row="0" FontFamily="Tw Cen MT" FontWeight="Bold" FontSize="16"/>
-            <Button Name="UpdateDroneButton" Background="{StaticResource ButtonBrush}" Visibility="Hidden" Content="Update Drone Model"  Grid.Row="1" FontFamily="Tw Cen MT" FontSize="16" Click="UpdateDroneButton_Click"/>
-            <Button Name="SendToChargeButton" Background="{StaticResource ButtonBrush}" Visibility="Hidden" Content="Send Drone to Charge"  Grid.Row="2" FontFamily="Tw Cen MT" FontSize="16" Click="SendToChargeButton_Click"/>
-            <Button Name="AssignPackageToDroneButton" Background="{StaticResource ButtonBrush}" Visibility="Hidden" Content="Assign a Package"   Grid.Row="4" FontFamily="Tw Cen MT" FontSize="16" Click="AssignPackageToDroneButton_Click"/>
-            <Button Name="CollectPackageButton" Background="{StaticResource ButtonBrush}" Visibility="Hidden" Content="Collect a Package"   Grid.Row="5" FontFamily="Tw Cen MT" FontSize="16" Click="CollectPackageButton_Click"/>
-            <Button Name="DeliverPackageButton" Background="{StaticResource ButtonBrush}" Visibility="Hidden" Content="Deliver Package"   Grid.Row="6" FontFamily="Tw Cen MT" FontSize="16" Click="DeliverPackageButton_Click"/>
-            <Button Name="ReleaseDroneFromChargeButton" Background="{StaticResource ButtonBrush}" Visibility="Hidden" Content="Release Drone From Charge"  Grid.Row="3" FontFamily="Tw Cen MT" FontSize="16" Click="ReleaseDroneFromChargeButton_Click"/>
-        </Grid>
-        <Image Name="DroneImage" Grid.Column="1" Margin="87,28,86,264" Stretch="Fill" Visibility="Hidden">
+
+        <StackPanel Name="ButtonGrid" Margin="70,19,0,19" Visibility="Visible" Orientation="Horizontal" Width="550">
+
+            <Button Name="UpdateDroneButton" Width="60" Background="{StaticResource AddButtonBrush}" Click="ModelUpdateButton_Click" Visibility="Visible" Content="Update Model" FontFamily="Tw Cen MT" FontSize="8" Margin="0,0,0,0"/>
+            <Button Name="SendToChargeButton" Width="60" Background="{StaticResource ButtonBrush}" Visibility="Visible" Content="Charge" FontFamily="Tw Cen MT" FontSize="8" Click="SendToChargeButton_Click" Margin="20,0,0,0"/>
+            <Button Name="AssignPackageToDroneButton"  Width="60" Background="{StaticResource ButtonBrush}" Visibility="Visible" Content="Assign Package"  FontFamily="Tw Cen MT" FontSize="8" Click="AssignPackageToDroneButton_Click" Margin="20,0,0,0"/>
+            <Button Name="CollectPackageButton" Width="60" Background="{StaticResource ButtonBrush}" Visibility="Visible" Content="Collect Package"  FontFamily="Tw Cen MT" FontSize="8" Click="CollectPackageButton_Click" Margin="20,0,0,0"/>
+            <Button Name="DeliverPackageButton" Width="60" Background="{StaticResource ButtonBrush}" Visibility="Visible" Content="Deliver Package"  FontFamily="Tw Cen MT" FontSize="8" Click="DeliverPackageButton_Click" Margin="20,0,0,0"/>
+            <Button Name="ReleaseDroneFromChargeButton" Width="60" Background="{StaticResource ButtonBrush}" Visibility="Visible" Content="Charge Release" FontFamily="Tw Cen MT" FontSize="8" Click="ReleaseDroneFromChargeButton_Click" Margin="20,0,0,0"/>
+        </StackPanel>
+        <TextBox Name="UpdateDroneModelText" HorizontalAlignment="Center" Margin="0,133,0,0" Text="{Binding Path=model}" TextWrapping="Wrap" Height="20" VerticalAlignment="Top" Width="120" Visibility="Visible" Grid.Row="1"/>
+        <Image Name="DroneImage" Margin="242,52,242,239" Stretch="Fill" Visibility="Visible" Grid.RowSpan="2">
             <Image.Source>
                 <BitmapImage UriSource="images/update-drone-image.png" />
             </Image.Source>
         </Image>
         <TextBox Name="ChargingAmount" Visibility="Hidden" Grid.Column="1" HorizontalAlignment="Center" Margin="0,175,0,0" Text="Enter Hours Charging" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" ContentElement.MouseEnter="ChargingAmount_MouseEnter"/>
         <Button Name="ChargingReleaseButton" Visibility="Hidden" Background="{StaticResource ButtonBrush}" Content="Release" Grid.Column="1" HorizontalAlignment="Center" Margin="0,216,0,0" VerticalAlignment="Top" Width="95" Click="ChargingReleaseButton_Click"/>
+        <Label Name="IDBlock" Content="{Binding Path=ID, Mode=TwoWay}" HorizontalAlignment="Center" Margin="0,105,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="120"/>
+        <Label Name="WeightBlock" Content="{Binding Path=weightCategory, Mode=TwoWay}" HorizontalAlignment="Center" Margin="0,159,0,0" Grid.Row="1"  VerticalAlignment="Top" Width="120"/>
+        <Label Name="StatusBlock" Content="{Binding Path=status, Mode=TwoWay}" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Top" Width="120" Margin="0,190,0,0"/>
+        <Label Name="BatteryBlock" Content="{Binding Path=battery, Mode=TwoWay}" HorizontalAlignment="Center" Grid.Row="1"   VerticalAlignment="Top" Margin="0,211,0,0" Width="120"/>
+        <Label Name="LocationBLock" Content="{Binding Path=location, Mode=TwoWay}" HorizontalAlignment="Center" Grid.Row="1"  VerticalAlignment="Top" Margin="0,232,0,0" Width="120" Height="45"/>
 
 
 
