--- a/dotNet5782_0545_8228/PL/App.xaml
+++ b/dotNet5782_0545_8228/PL/App.xaml
@@ -16,6 +16,14 @@
             <GradientStop Color="LightBlue" Offset="0"/>
             <GradientStop Color="#24A0ED" Offset="1"/>
         </LinearGradientBrush>
+        <LinearGradientBrush x:Key="CancelButtonBrush" EndPoint="0.5,1" StartPoint="0.5,0">
+            <GradientStop Color="PaleVioletRed" Offset="0"/>
+            <GradientStop Color="DarkRed" Offset="1"/>
+        </LinearGradientBrush>
+        <LinearGradientBrush x:Key="RefreshButtonBrush" EndPoint="0.5,1" StartPoint="0.5,0">
+            <GradientStop Color="LightGreen" Offset="0"/>
+            <GradientStop Color="DarkGreen" Offset="1"/>
+        </LinearGradientBrush>
         
 
 
