--- a/dotNet5782_0545_8228/PL/ListWindow.xaml
+++ b/dotNet5782_0545_8228/PL/ListWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
         Title="System Management" Height="640" Width="800"
-        Background="Transparent"
+        Background="{StaticResource WindowBrush}"
         WindowStyle="None"
         AllowsTransparency="True">
     
@@ -34,7 +34,7 @@
 
                         <Button Name="ClearFilterButton1" Content="Clear Filters" FontSize="18" FontFamily="Tw Cen MT"  Grid.Column="0" Background="{StaticResource ButtonBrush}" Click="ClearFilterButton_Click"/>
                         <ComboBox Name="DroneStatusSelector" Background="{StaticResource ButtonBrush}" SelectionChanged="DroneStatusSelector_SelectionChanged" Grid.Column="1" />
-                        <Button Name="AddDroneButton" Content="Add Drone" Background="{StaticResource AddButtonBrush}" Grid.Column="3" Click="AddDroneButton_Click" FontSize="18" FontFamily="Tw Cen MT" />
+                        <Button Name="AddDroneButton" Content="+ Add Drone" Background="{StaticResource AddButtonBrush}" Grid.Column="3" Click="AddDroneButton_Click" FontSize="18" FontFamily="Tw Cen MT" />
                         <ComboBox Name="DroneWeightSelector" Grid.Column="2" Background="{StaticResource ButtonBrush}" SelectionChanged="DroneWeightSelector_SelectionChanged"/>
 
                     </Grid>
@@ -70,12 +70,12 @@
                         </Grid.ColumnDefinitions >
                         <Button Name="ClearFilterButton2" Content="Clear Filters" FontSize="18" FontFamily="Tw Cen MT"  Grid.Column="0" Background="{StaticResource ButtonBrush}" Click="ClearFilterButton_Click"/>
                         <ComboBox Name="PackageStatusSelector" Background="{StaticResource ButtonBrush}" SelectionChanged="DroneStatusSelector_SelectionChanged" Grid.Column="1" />
-                        <Button Name="AddPackageeButton" Content="Add Package" Background="{StaticResource ButtonBrush}" Grid.Column="3" Click="AddDroneButton_Click" FontSize="18" FontFamily="Tw Cen MT" />
+                        <Button Name="AddPackageeButton" Content="+ Add Package" Background="{StaticResource AddButtonBrush}" Grid.Column="3" Click="AddDroneButton_Click" FontSize="18" FontFamily="Tw Cen MT" />
                         <ComboBox Name="PackageWeightSelector" Grid.Column="2" Background="{StaticResource ButtonBrush}" SelectionChanged="DroneWeightSelector_SelectionChanged"/>
 
                     </Grid>
 
-                    <ListView  Name="PackageListView" Grid.Row="1" ItemsSource="{Binding}" Background="{StaticResource WindowBrush}" MouseDoubleClick="DroneActionWindow"  >
+                    <ListView  Name="PackageListView" Grid.Row="1" ItemsSource="{Binding}" Background="{StaticResource WindowBrush}" MouseDoubleClick="PackageListView_MouseDoubleClick"  >
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="ID" Width="30" DisplayMemberBinding="{Binding Path=ID}"/>
@@ -107,12 +107,12 @@
 
                         <Button Name="ClearFilterButton3" Content="Clear Filters" FontSize="18" FontFamily="Tw Cen MT"  Grid.Column="0" Background="{StaticResource ButtonBrush}" Click="ClearFilterButton_Click"/>
                         <ComboBox Name="StationStatusSelector" Background="{StaticResource ButtonBrush}" SelectionChanged="DroneStatusSelector_SelectionChanged" Grid.Column="1" />
-                        <Button Name="AddStationButton" Content="Add Station" Background="{StaticResource ButtonBrush}" Grid.Column="3" Click="AddDroneButton_Click" FontSize="18" FontFamily="Tw Cen MT" />
+                        <Button Name="AddStationButton" Content="+ Add Station" Background="{StaticResource AddButtonBrush}" Grid.Column="3" Click="AddDroneButton_Click" FontSize="18" FontFamily="Tw Cen MT" />
                         <ComboBox Name="StationSelector" Grid.Column="2" Background="{StaticResource ButtonBrush}" SelectionChanged="DroneWeightSelector_SelectionChanged"/>
 
                     </Grid>
 
-                        <ListView  Name="StationListView" ItemsSource="{Binding}" Grid.Row="1" Background="{StaticResource WindowBrush}">
+                        <ListView  Name="StationListView" ItemsSource="{Binding}" Grid.Row="1" Background="{StaticResource WindowBrush}" MouseDoubleClick="StationListView_MouseDoubleClick">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="ID" Width="30" DisplayMemberBinding="{Binding Path=ID}"/>
@@ -144,7 +144,7 @@
 
                             <Button Name="ClearFilterButton4" Content="Clear Filters" FontSize="18" FontFamily="Tw Cen MT"  Grid.Column="0" Background="{StaticResource ButtonBrush}" Click="ClearFilterButton_Click"/>
                             <ComboBox Name="CustomerStatusSelector" Background="{StaticResource ButtonBrush}" SelectionChanged="DroneStatusSelector_SelectionChanged" Grid.Column="1" />
-                            <Button Name="AddCustomerButton" Content="Add Customer" Background="{StaticResource ButtonBrush}" Grid.Column="3" Click="AddDroneButton_Click" FontSize="18" FontFamily="Tw Cen MT" />
+                            <Button Name="AddCustomerButton" Content="+ Add Customer" Background="{StaticResource AddButtonBrush}" Grid.Column="3" Click="AddDroneButton_Click" FontSize="18" FontFamily="Tw Cen MT" />
                             <ComboBox Name="CustomerWeightSelector" Grid.Column="2" Background="{StaticResource ButtonBrush}" SelectionChanged="DroneWeightSelector_SelectionChanged"/>
                         </Grid>
                         <ListView  Name="CustomerListView" ItemsSource="{Binding}" Grid.Row="1" Background="{StaticResource WindowBrush}" MouseDoubleClick="CustomerListView_MouseDoubleClick"  >
@@ -169,21 +169,22 @@
 
         </TabControl>
             <Button Name="LogoutButton4" Grid.Row="1"
-                                Content="Logout"
-                                Background="{StaticResource ButtonBrush}"
-                                Click="CloseButton_Click"
-                                FontSize="12" FontFamily="Tw Cen MT" 
-                                Margin="10,0,0,0"
-                                HorizontalAlignment="Left" VerticalAlignment="Bottom"
-                                Width="100"/>
+                    Content="✕ Logout"
+                    Background="{StaticResource ButtonBrush}"
+                    Click="CloseButton_Click"
+                    FontSize="12" FontFamily="Tw Cen MT" 
+                    Margin="10,0,0,0"
+                    HorizontalAlignment="Left" VerticalAlignment="Bottom"
+                    Width="100"/>
             <Button Name="RefreshButton" Grid.Row="1"
-                            Content="Refresh"
-                            Background="{StaticResource ButtonBrush}"
-                            Click="RefreshButton_Click"
-                            FontSize="12" FontFamily="Tw Cen MT" 
-                            Margin="150,0,0,0"
-                            HorizontalAlignment="Left" VerticalAlignment="Bottom"
-                            Width="100"/>
+                    Content="🗘 Refresh"
+                    Foreground="White"
+                    Background="{StaticResource RefreshButtonBrush}"
+                    Click="RefreshButton_Click"
+                    FontSize="12" FontFamily="Tw Cen MT" 
+                    Margin="150,0,0,0"
+                    HorizontalAlignment="Left" VerticalAlignment="Bottom"
+                    Width="100"/>
 
 
 
