--- a/dotNet5782_0545_8228/PL/CustomerViewWindow.xaml
+++ b/dotNet5782_0545_8228/PL/CustomerViewWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="CustomerViewWindow" Height="450" Width="800">
+        Title="CustomerViewWindow" Height="500" Width="600">
     <Grid Background="{StaticResource WindowBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="50*"/>
@@ -13,7 +13,7 @@
         </Grid.RowDefinitions>
 
 
-        <Grid Grid.Row="1">
+        <Grid Margin="0,63,0,6" Grid.RowSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="400*"/>
                 <ColumnDefinition Width="400*"/>
@@ -43,12 +43,13 @@
                 Content="Cancel" 
                 HorizontalAlignment="Left"  
                 VerticalAlignment="Top" Width="60" Height="20" 
-                Click="Cancel_Click"  Margin="10,342,0,0" 
+                Click="Cancel_Click"  Margin="12,372,0,0" 
                 FontFamily="Tw Cen MT" FontSize="14" FontStretch="Expanded"
-                Background="{StaticResource ButtonBrush}" Grid.Row="1"/>
+                Background="{StaticResource ButtonBrush}"/>
+            <Image Source="/images/user.png" Margin="102,8,102,256"/>
 
-            <StackPanel Grid.Column="0" VerticalAlignment="Center" Height="200" Width="150">
-                <Label Name="IDBlock" Content="{Binding ID, Mode=TwoWay, StringFormat=Customer ID: {0:#}}" Width="120" Height="26" Margin="0,20,0,0"/>
+            <StackPanel Grid.Column="0" VerticalAlignment="Center" Height="200" Width="150" Margin="0,0,0,-50">
+                <Label Name="IDBlock" Content="{Binding ID, Mode=TwoWay, StringFormat='Customer ID: {0}'}" Width="120" Height="26" Margin="0,20,0,0"/>
                 <TextBox Name="NameBlock" Text="{Binding name, Mode=TwoWay}" Width="120" Margin="0,20,0,0"/>
                 <TextBox Name="PhoneBlock" Text="{Binding phoneNumber, Mode=TwoWay}" Width="120" Margin="0,20,0,0"/>
                 <Button Name="UpdateCustomerButton" Width="120" Background="{StaticResource AddButtonBrush}" Margin="0,20,0,0" Click="UpdateButton_Click" Visibility="Visible" Content="✓ Save Changes" FontFamily="Tw Cen MT" FontSize="10" Height="19"/>
@@ -61,6 +62,7 @@
                         <GridViewColumn Header="Package #" DisplayMemberBinding="{Binding Path=ID}"/>
                         <GridViewColumn Header="Weight" DisplayMemberBinding="{Binding Path=weight}"/>
                         <GridViewColumn Header="Status" DisplayMemberBinding="{Binding Path=status}"/>
+                        <GridViewColumn Header="Priority" DisplayMemberBinding="{Binding Path=priority}"/>
                     </GridView>
                 </ListView.View>
             </ListView>
@@ -70,13 +72,13 @@
                         <GridViewColumn Header="Package #" DisplayMemberBinding="{Binding Path=ID}"/>
                         <GridViewColumn Header="Weight" DisplayMemberBinding="{Binding Path=weight}"/>
                         <GridViewColumn Header="Status" DisplayMemberBinding="{Binding Path=status}"/>
+                        <GridViewColumn Header="Priority" DisplayMemberBinding="{Binding Path=priority}"/>
                     </GridView>
                 </ListView.View>
             </ListView>
-
-
-
+            <TextBlock Grid.Column="1" HorizontalAlignment="Left" FontStyle="Italic" Text="Outgoing Packages" TextWrapping="Wrap" VerticalAlignment="Top" Width="136" Height="28" Margin="54,203,0,0"/>
 
         </Grid>
+        <TextBlock HorizontalAlignment="Left" Margin="354,39,0,0" FontStyle="Italic" Text="Incoming Packages" TextWrapping="Wrap" VerticalAlignment="Top" Width="145" Height="24"/>
     </Grid>
 </Window>
