--- a/dotNet5782_0545_8228/PL/PackageViewWindow.xaml
+++ b/dotNet5782_0545_8228/PL/PackageViewWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="PackageViewWindow" Height="450" Width="800">
+        Title="PackageViewWindow" Height="450" Width="600">
     <Grid Background="{StaticResource WindowBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="50*"/>
@@ -15,10 +15,10 @@
 
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="400*"/>
-                <ColumnDefinition Width="400*"/>
+                <ColumnDefinition Width="300*"/>
+                <ColumnDefinition Width="300*"/>
             </Grid.ColumnDefinitions>
-           
+
             <Button Name="AddPackage" 
                 Content="Add Package" 
                 HorizontalAlignment="Left"  
@@ -35,20 +35,25 @@
                 Click="Cancel_Click"  Margin="10,342,0,0" 
                 FontFamily="Tw Cen MT" FontSize="14" FontStretch="Expanded"
                 Background="{StaticResource ButtonBrush}" Grid.Row="1"/>
+            <Image Source="/images/box.png" Margin="102,8,102,256"/>
+            <Image Source="/images/drone-package.png" Margin="95,6,95,246" Grid.Column="1"/>
 
-            <Button Name="ViewDroneButton" Width="40" Height="20" Content="View" Margin="40,-40,0,0"/>
-            <Button Name="ViewSenderButton" Width="40" Height="20" Content="View" Margin="40,0,0,0"/>
-            <Button Name="ViewReceiverButton" Width="40" Height="20" Content="View" Margin="40, 40,0,0"/>
-
-            <StackPanel Grid.Column="0" VerticalAlignment="Center" Height="200" Width="150" Margin="128,0,122,0">
-                <Label Name="IDBlock" Content="{Binding ID, Mode=TwoWay, StringFormat=ID: {0:#}}" Width="120" Height="26" Margin="0,20,0,0"/>
-                <Label Name="SenderBlock" Content="{Binding senderName, Mode=TwoWay}" Width="120" Margin="0,20,0,0"/>
-                <Label Name="ReceiverBlock" Content="{Binding receiverName, Mode=TwoWay}" Width="120"/>
-                <Label Name="Status" Content="{Binding status, Mode=TwoWay}" Width="120" Margin="0,20,0,0"/>
-                <Label Name="WeightBlock" Content="{Binding weightCategory, Mode=TwoWay}" Width="120" Margin="0,20,0,0"/>
-                <Label Name="PriorityBlock" Content="{Binding priority, Mode=TwoWay}" Width="120" Margin="0,20,0,0"/>
+            <StackPanel Name="PackagePanel" Grid.Column="0" VerticalAlignment="Top" Height="200" Width="150" Margin="75,121,75,0">
+                <TextBlock Name="IDBlock" Text="{Binding ID, Mode=TwoWay, StringFormat='ID: {0}'}" Width="120" Height="15" Margin="0,10,0,0" Background="LightGray"/>
+                <TextBlock Name="SenderBlock" Text="{Binding senderName, Mode=TwoWay}" Width="120" Margin="0,10,0,0"  Background="LightGray" Height="14"/>
+                <TextBlock Name="ReceiverBlock" Text="{Binding receiverName, Mode=TwoWay}" Width="120" Margin="0,10,0,0" Background="LightGray" Height="14"/>
+                <TextBlock Name="Status" Text="{Binding status, Mode=TwoWay}" Width="120" Margin="0,10,0,0"  Background="LightGray" Height="15"/>
+                <TextBlock Name="WeightBlock" Text="{Binding weightCategory, Mode=TwoWay}" Width="120" Margin="0,10,0,0"  Background="LightGray" Height="15"/>
+                <TextBlock Name="PriorityBlock" Text="{Binding priority, Mode=TwoWay}" Width="120" Margin="0,10,0,0"  Background="LightGray" Height="15"/>
+                <Button Name="DeletePackageButton" Width="120" Margin="0,20,0,0" Background="{StaticResource CancelButtonBrush}" Click="DeletePackageButton_Click"  Visibility="Visible" Content="✕ Delete Package" FontFamily="Tw Cen MT" Foreground="LightGray" FontSize="10" Height="19"/>
             </StackPanel>
-            <Button Name="DeletePackageButton" Width="120" Background="{StaticResource CancelButtonBrush}" Margin="140,308,140,45" Click="DeletePackageButton_Click"  Visibility="Visible" Content="✕ Delete Package" FontFamily="Tw Cen MT" Foreground="LightGray" FontSize="10" Height="19"/>
+
+            <StackPanel Name="DronePanel" Grid.Column="1" VerticalAlignment="Top" Height="200" Width="150" Margin="75,147,75,0">
+                <TextBlock Name="DroneIDBlock" FontSize="9" Foreground="Gray" Text="{Binding ID, Mode=TwoWay, FallbackValue='No Content Available', StringFormat='ID: {0}'}" Width="120" Height="20" Margin="0,10,0,0" Background="LightGray"/>
+                <TextBlock Name="DroneWeightBlock" FontSize="9" Foreground="Gray" Text="{Binding weightCategory, FallbackValue='No Content Available', Mode=TwoWay}" Width="120" Margin="0,10,0,0"  Background="LightGray" Height="20"/>
+                <Label Name="DroneLocationBlock" FontSize="9" Foreground="Gray" Content="{Binding location, FallbackValue='No Content Available', Mode=TwoWay}" Width="120" Margin="0,10,0,0" Background="LightGray" Height="20"/>
+                <TextBlock Name="DroneStatusBlock" FontSize="9" Foreground="Gray" Text="{Binding status, FallbackValue='No Content Available', Mode=TwoWay}" Width="120" Margin="0,10,0,0"  Background="LightGray" Height="20"/>
+            </StackPanel>
 
 
 
